--- a/application.yml
+++ b/application.yml
@@ -11,7 +11,7 @@ words: I,You,He,She,It
 ---
 spring:
   profiles: verb
-words: ran,knew,had,saw,bought
+words: grabbed,carried,charged,said,lost
 
 ---
 spring:
