--- a/application.yml
+++ b/application.yml
@@ -2,6 +2,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://eureka-primary:8010/eureka/,http://eureka-secondary:8011/eureka/,http://eureka-tertiary:8012/eureka/
+lucky-word: Eureka!
 ---
 spring:
   profiles: subject
