--- a/application.yml
+++ b/application.yml
@@ -3,7 +3,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8010/eureka/, http://eureka-secondary:8012/eureka/, http://eureka-tertiary:8013/eureka/, http://eureka-primary:8011/eureka/
+      defaultZone: http://localhost:8010/eureka/ #Multiples instancias http://eureka-secondary:8012/eureka/, http://eureka-tertiary:8013/eureka/, http://eureka-primary:8011/eureka/
 ---
 spring:
   profiles: subject
