--- a/application.yml
+++ b/application.yml
@@ -1,9 +1,12 @@
 ---
 # Items that apply to ALL profiles:
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8762/eureka/
+#eureka:
+  #client:
+    #serviceUrl:
+      #defaultZone: http://localhost:8762/eureka/
+ogm:
+  global:
+    parameter: Parametro que aplica para todos los perfiles
 ---
 spring:
   profiles: subject
