--- a/application.yml
+++ b/application.yml
@@ -6,8 +6,7 @@
       #defaultZone: http://localhost:8762/eureka/
 ogm:
   global:
-    parameter: Parametro que aplica para todos los perfiles
-  welcome:
+    param: Parameter for all Applications and Profiles
     message: Welcome to OGM services!
 ---
 spring:
